2010-08-05  Cosmin Truta  <ctruta@chromium.org>

        Reviewed by Eric Seidel.

        Apply a stylistic fix to the patch 62640.
        https://bug-41175-attachments.webkit.org/attachment.cgi?id=62640
        https://bugs.webkit.org/show_bug.cgi?id=41175

        * WebCore/platform/graphics/skia/ImageBufferSkia.cpp:
        (getImageData):

2010-08-05  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Roben.

        Make SearchPopupMenuWin more portable
        https://bugs.webkit.org/show_bug.cgi?id=43527

        Add #if PLATFORM(CF) around CoreFoundation code.

        * platform/win/SearchPopupMenuWin.cpp:
        (WebCore::SearchPopupMenuWin::enabled):
        (WebCore::SearchPopupMenuWin::saveRecentSearches):
        (WebCore::SearchPopupMenuWin::loadRecentSearches):

2010-08-05  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r63653.
        http://trac.webkit.org/changeset/63653
        https://bugs.webkit.org/show_bug.cgi?id=43592

        regressed multiple background-images (Requested by smfr on
        #webkit).

        * manual-tests/css3-background-layer-count.html: Removed.
        * rendering/style/FillLayer.cpp:
        (WebCore::FillLayer::fillUnsetProperties):
        (WebCore::FillLayer::cullEmptyLayers):
        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags::adjustBackgroundLayers):
        (WebCore::InheritedFlags::adjustMaskLayers):

2010-08-05  Mark Rowe  <mrowe@apple.com>

        Reviewed by Jon Honeycutt.

        Fix some leaks seen on the buildbot.

        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::paintToCanvas): Adopt the newly-created CoreGraphics objects rather than sharing ownership
        and over-incrementing their reference count. Also cleaned up the bizarre wrapping used for function arguments while I was
        touching this code.

2010-08-05  James Robinson  <jamesr@chromium.org>
